Shenandoah: Shenandoah build failed after JDK-8235573

XMLWordPrintable

    • gc
    • b10

      n file included from /home/zgu/ws/jdk/src/hotspot/share/gc/shenandoah/heuristics/shenandoahHeuristics.hpp:29,
                       from /home/zgu/ws/jdk/src/hotspot/share/gc/shenandoah/heuristics/shenandoahAdaptiveHeuristics.hpp:28,
                       from /home/zgu/ws/jdk/src/hotspot/share/gc/shenandoah/heuristics/shenandoahAdaptiveHeuristics.cpp:27:
      /home/zgu/ws/jdk/src/hotspot/share/gc/shenandoah/shenandoahPhaseTimings.hpp:236:3: error: 'EventGCPhaseParallel' does not name a type
        236 | EventGCPhaseParallel _event;
            | ^~~~~~~~~~~~~~~~~~~~
      In file included from /home/zgu/ws/jdk/src/hotspot/share/gc/shenandoah/heuristics/shenandoahHeuristics.hpp:29,
                       from /home/zgu/ws/jdk/src/hotspot/share/gc/shenandoah/heuristics/shenandoahAggressiveHeuristics.hpp:28,
                       from /home/zgu/ws/jdk/src/hotspot/share/gc/shenandoah/heuristics/shenandoahAggressiveHeuristics.cpp:27:
      /home/zgu/ws/jdk/src/hotspot/share/gc/shenandoah/shenandoahPhaseTimings.hpp:236:3: error: 'EventGCPhaseParallel' does not name a type
        236 | EventGCPhaseParallel _event;
            | ^~~~~~~~~~~~~~~~~~~~
      gmake[3]: *** [lib/CompileJvm.gmk:143: /home/zgu/ws/jdk/build/linux-x86_64-server-fastdebug/hotspot/variant-server/libjvm/objs/shenandoahAggressiveHeuristics.o] Error 1

            Assignee:
            Zhengyu Gu
            Reporter:
            Zhengyu Gu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: