8251192: Shenandoah: Shenandoah build failed after JDK-8235573

Reviewed-by: stuefe, ysuenaga, adityam